# comand-center-server

./: .gitignore  Cargo copy.toml  Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
plugins/blank_plugin/: Cargo.toml
plugins/blank_plugin/src/: lib.rs
plugins/comand-center-control/: Cargo.toml
plugins/comand-center-control/src/: lib.rs
plugins/example-plugin/: Cargo.toml
plugins/example-plugin/src/: lib.rs
plugins/lanbox/: Cargo.toml
plugins/lanbox/src/: lib.rs
plugins/onyx/: Cargo.toml
plugins/onyx/src/: lib.rs
plugins/pro-presenter/: Cargo.toml
plugins/pro-presenter/src/: lib.rs
plugins/vmix/: Cargo.toml
plugins/vmix/src/: lib.rs
reference/: api_ref.json  config.json  config.yaml  functions.yaml  macro functions.txt
src/: main.rs
