[package]
name = "command-center-server"
version = "0.1.0"
authors = ["Banned Patriot <realbannedpatriot@protonmail.com>"]
edition = "2018"

[dependencies]
core = { path = "core" }
libloading = "0.5.2"
serde = "*"
serde_json = "*"
serde_derive = "*"
tokio = { version = "1.8.1", features = ["full"] }

[workspace]
members = ["plugins/comand-center-control", "plugins/pro-presenter"]