[package]
name = "command-center-server"
version = "0.1.0"
authors = ["Banned Patriot <realbannedpatriot@protonmail.com>"]
edition = "2018"

[dependencies]
core = { path = "core" }

libloading = "0.5.2"
derive_builder = "*"
tokio = { version = "*", features = ["full"] }
tokio-tungstenite = "*"
tungstenite = "*"
futures-util = "*"
futures-channel = "*"

serde = "*"
serde_json = "*"
serde_derive = "*"


[workspace]
members = ["plugins/blank_plugin"]