[package]
name = "command-center-server"
version = "0.1.0"
authors = ["Banned Patriot <realbannedpatriot@protonmail.com>"]
edition = "2018"

[dependencies]
core = { path = "core" }
yaml-rust = "0.4.5"

libloading = "0.7.0"
derive_builder = "*"
tokio = { version = "*", features = ["full"] }
tokio-tungstenite = "*"
tungstenite = "*"
futures-util = "*"
futures-channel = "*"
linked-hash-map = "0.5.4"

serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
serde_json = "*"



[workspace]
members = ["plugins/example-plugin"]