[package]
name = "_pro_presenter"
version = "0.1.0"
authors = ["Banned Patriot <realbannedpatriot@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
core = { path = "../../core" }
serde = "*"
serde_json = "*"
serde_derive = "*"
tokio = { version = "1.8.1", features = ["full"] }